Fixed: scrollbar was always visible in guest screen

--- a/client/app/views/styles/_popover.styl
+++ b/client/app/views/styles/_popover.styl
@@ -180,7 +180,7 @@ input-color   = #555
 
     .fixed-height
         height 24rem
-        overflow scroll
+        overflow auto
 
     .caption
         display inline-block
